@@ -512,14 +512,20 @@
     }],
     ["bullet_list", {
        "commands": [
-            [ "VALIGN", [ 0, 0 ], [ -1, -1 ], "TOP" ]
+            [ "VALIGN", [ 0, 0 ], [ -1, -1 ], "TOP" ],
+            [ "TOPPADDING", [ 0, 0 ], [ -1, -1 ], 0 ], 
+            [ "BOTTOMPADDING", [ 0, 0 ], [ -1, -1 ], 0 ], 
+            [ "RIGHTPADDING", [ 0, 0 ], [ 1, -1 ], 0 ] 
         ], 
         "colWidths": ["20",null]
     }],
      [ "endnote", {
          "parent": "bodytext",
          "commands": [
-            [ "VALIGN", [ 0, 0 ], [ -1, -1 ], "TOP" ] 
+            [ "VALIGN", [ 0, 0 ], [ -1, -1 ], "TOP" ],
+            [ "TOPPADDING", [ 0, 0 ], [ -1, -1 ], 0 ], 
+            [ "BOTTOMPADDING", [ 0, 0 ], [ -1, -1 ], 0 ], 
+            [ "RIGHTPADDING", [ 0, 0 ], [ 1, -1 ], 0 ] 
         ], 
         "colWidths": ["3cm",null]
     }],
